# Content-Autopilot-Codex

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260414_0001_initial_schema.py  20260414_0002_content_strategy_fields.py  20260422_0004_extend_channels_for_autoposting.py  20260422_0005_add_content_plan_id_to_job_runs.py  20260505_0006_add_research_pipeline_models.py  20260512_0007_add_evaluator_models.py  4bcbb7aee979_add_monitoring_and_system_setting_models.py  d3c297b7f0dd_add_system_settings_table.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: brand_profile.py  content_plans.py  dashboard.py  health.py  (+7 more)
apps/api/app/core/: config.py
apps/api/app/db/: base.py  bootstrap.py  session.py
apps/api/app/models/: __init__.py  blog_post.py  brand_profile.py  content_plan.py  evaluator.py  job_run.py  monitoring.py  product.py  product_channel.py  research.py  social_account.py  system.py
apps/api/app/schemas/: bootstrap.py  brand_profile.py  common.py  content_plan.py  dashboard.py  evaluator.py  job_run.py  monitoring.py  product.py  system.py
apps/api/app/services/: bootstrap.py  channel_profiles.py  channel_validation.py  content_evaluation.py  generation.py  generation_prompt.py  llm_client.py  media_generator.py  monitoring.py  plan_evaluation.py  plan_execution.py  plan_generation.py  research_pipeline.py  research_sonar.py  telegram_publisher.py  text_normalization.py  userbot_publisher.py
(+57 files in other folders)
